# ia_research

./: .gitignore  MUJOCO_LOG.TXT  README.md  model.md  pyproject.toml  report.md
src/: callback.py  check_env.py  check_model.py  checking.py  keep_training.py  main.py  test_learn.py  train.py  training.py
src/robotis_env/: __init__.py  robotis_env.py
src/robotis_env/robotis_mjcf/: op3.xml
