[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stable-baselines3",
    "imageio>=2.36.0",
    "mujoco>=3.2.5",
    "tensorboard>=2.18.0",
    "tqdm>=4.67.0",
    "rich>=13.9.4",
    "robotis-op3",
    "sb3-contrib",
]

[tool.uv.sources]
stable-baselines3 = { git = "https://github.com/DLR-RM/stable-baselines3" }
sb3-contrib = { git = "https://github.com/Stable-Baselines-Team/stable-baselines3-contrib/" }
robotis-op3 = { path = "../robotis-op3/dist/robotis_op3-0.2.29-py3-none-any.whl" }
